<resources>
    <string name="app_name">AntennaVR</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_is_loading">GPS is loading...</string>
    <string name="action_settings">Settings</string>
    <string name="pref_antenum">Maximum Number of Antennas</string>
    <string name="pref_antenum_summ">Up to how many antennas would you like to be shown? (Negative for unlimited)</string>
    <string name="pref_radius">Radius in meters</string>
    <string name="pref_radius_summ">Show antennas within given radius. (Negative for unlimited)</string>
    <string name="mode">Mode</string>
    <string name="pref_file_key">mundis.kostas4949.antennavr</string>
    <string name="cameramode">cameramode_flag</string>
    <string name="pref_minTime">Minimum Time</string>
    <string name="pref_minTime_summ">How often would you like to check for location updates? (in millisecs)</string>
    <string name="pref_minDistance">Minimum Distance</string>
    <string name="pref_minDistance_summ">Update location after moving minimum distance. (in meters)</string>
</resources>